--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,110 @@ body {
   background-color: #eee;
   font-family: "Nunito Sans";
 }
+
+#main h1 {
+  color: #444;
+  text-align: center;
+}
+#main {
+  padding: 0;
+  box-sizing: border-box;
+  width: 60%;
+  height: 100%;
+}
+
+#book-list {
+  padding: 0;
+}
+#book-list li {
+  display: inline-block;
+  margin: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #880e4f;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  color: #880e4f;
+  transition: background-color 0.4s ease-out;
+}
+#book-list li:hover {
+  background-color: #880e4f31;
+}
+form {
+  background-color: #fff;
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
+
+form .field {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+form label {
+  text-align: right;
+  padding: 6px;
+}
+
+form select,
+form input {
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+form button {
+  color: #fff;
+  font-size: 2em;
+  background-color: #ad1457;
+  border: 0;
+  padding: 0 10px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  cursor: pointer;
+}
+
+#book-details {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background-color: #ad1457;
+  padding: 30px;
+  overflow: auto;
+  box-shadow: -2px -3px 5px rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  color: #fff;
+}
+
+.loader {
+  width: 70px;
+  height: 70px;
+  background-color: #ad1457;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  animation: loader 2s linear infinite;
+}
+
+@keyframes loader {
+  0%,
+  100% {
+    transform: rotate(0);
+    border: 4px solid #fff;
+  }
+  20% {
+    transform: rotate(270deg);
+    border: 4px dotted #fff;
+  }
+
+  50% {
+    transform: rotate(360deg);
+    border: 4px dashed #fff;
+  }
+}
